# pitpls

./: .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  Cargo.toml  LICENSE  README.md  eslint.config.js  index.html  justfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/core/: Cargo.toml
crates/core/src/: common.rs  lib.rs  rounding.rs  settings.rs  tax.rs
crates/core/src/common/: amount.rs  country.rs  currency.rs  mod.rs
crates/core/src/crypto/: mod.rs  model.rs
crates/core/src/dividend/: mod.rs  model.rs
crates/core/src/interest/: mod.rs  model.rs
crates/core/src/rate/: csv.rs  mod.rs  model.rs
crates/core/src/summary/: mod.rs  model.rs
crates/importers/: Cargo.toml
crates/importers/src/: error.rs  lib.rs  model.rs
crates/importers/src/impls/: coinbase.rs  mod.rs  revolut.rs  t212.rs
crates/importers/tests/fixtures/coinbase/: transactions.csv
crates/importers/tests/fixtures/t212/: dividends_only.csv  dividents_interest.csv  dividents_interest_stock.csv  interest_only.csv
crates/nbr/: Cargo.toml
crates/nbr/src/: api.rs  csv.rs  error.rs  lib.rs
src/: bindings.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/command/: crypto.rs  dividend.rs  import.rs  interest.rs  mod.rs  rate.rs  settings.rs  tax.rs  warnings.rs  year.rs
src-tauri/src/repository/: crypto.rs  dividend.rs  interest.rs  migration.rs  mod.rs  rate.rs  settings.rs  year.rs
src/components/: app-layout.tsx  crypto-form-modal.tsx  currency-value.tsx  dividend-form-modal.tsx  error-state.tsx  form-fields.tsx  interest-form-modal.tsx  loading-state.tsx  selection-header.tsx  theme-provider.tsx  theme-toggle.tsx  year-provider.tsx  year-selector.tsx
src/components/ui/: button.tsx  dialog.tsx  file-upload.tsx  input.tsx  label.tsx  select.tsx  table.tsx  tooltip.tsx
src/hooks/: use-selection.ts
src/lib/: display.ts  utils.ts
src/pages/: crypto-page.tsx  dividend-page.tsx  imports-page.tsx  interest-page.tsx  main-page.tsx  rates-page.tsx  settings-page.tsx
