[package]
name = "pitpls-nbr"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pitpls-core.workspace = true

chrono.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde = { version = "1", features = ["derive"] }
thiserror.workspace = true
tokio.workspace = true
